# aviutl2-hs

./: .gitignore  .gitmodules  LICENSE  README.md  aviutl2-haskell-sdk.cabal  aviutl2.cabal
cbits/: aviutl2_haskell_sdk_shim.cpp  aviutl2_shims.c  hs_dllmain.c  static_runtime_compat.c
examples/: ImageRsInput.hs  ImageRsInput_stub.h  MetronomePlugin.hs  MetronomePlugin_stub.h  MetronomeWav.hs  ObjectLayerFrameSretFilter.hs  PixelFormatTestInput.hs  PixelFormatTestInput_stub.h  PixelRgbaByValueFilter.hs  PixelRgbaByValueFilter_stub.h  PluginSupport.hs  RandomColorFilter.hs  RandomColorFilter_stub.h  SingleImageOutput.hs  SingleImageOutput_stub.h  UsernameModule.hs  UsernameModule_stub.h
include/aviutl2_sdk/: filter2.h  module2.h  plugin2.h
licenses/: zlib_LICENSE.txt
plugin/licenses/: THIRD_PARTY_LICENSES.txt
scripts/: build-rs-port-samples.ps1
src/AviUtl2/: Cache.hs  Config.hs  Edit.hs  Filter.hs  Host.hs  Input.hs  Logger.hs  Module.hs  Opaque.hs  Output.hs  Plugin.hs  Types.hs
src/AviUtl2/Filter/: Builder.hs
src/AviUtl2/Plugin/: Export.hs
