cabal-version: 2.4
name:          aviutl2-haskell-sdk
version:       0.1.0.0
synopsis:      AviUtl ExEdit2 Plugin SDK for Haskell with a minimal C++ ABI shim
description:   Haskell bindings for the AviUtl ExEdit2 Plugin SDK.
               Most SDK tables are represented directly in Haskell.  The only
               native layer is a small C++ shim for Haskell RTS startup, C/C++
               ABI corner cases, and cache2.h value-return APIs.
category:      FFI, Multimedia
license:       MIT
license-file:  LICENSE
author:        kanade-ak
build-type:    Simple

library
  exposed-modules:
    AviUtl2.Plugin
    AviUtl2.Plugin.Export
    AviUtl2.Opaque
    AviUtl2.Types
    AviUtl2.Logger
    AviUtl2.Config
    AviUtl2.Cache
    AviUtl2.Filter
    AviUtl2.Filter.Builder
    AviUtl2.Input
    AviUtl2.Output
    AviUtl2.Module
    AviUtl2.Edit
    AviUtl2.Host
  build-depends:
    base >= 4.14 && < 5,
    JuicyPixels >= 3.3 && < 3.4,
    bytestring >= 0.11 && < 0.13,
    process >= 1.6 && < 1.7,
    directory >= 1.3 && < 1.4,
    filepath >= 1.4 && < 1.6,
    vector >= 0.12 && < 0.14
  hs-source-dirs: src
  include-dirs: include
  cxx-sources:
    cbits/aviutl2_haskell_sdk_shim.cpp
  cxx-options: -std=c++17
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat
  if os(windows)
    cpp-options: -DWINDOWS
    extra-libraries: kernel32 user32 gdi32 stdc++
